// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileNav Component should match snapshot 1`] = `
<div
  className="pro_nav user_nav"
>
  <ul>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin"
      >
        Posts
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin/tagged"
      >
        Tagged
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin/shared"
      >
        Shared
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin/gallery"
      >
        Gallery
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin/bookmarks"
      >
        Bookmarks
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin/groups"
      >
        Groups
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin/about"
      >
        About
      </NavLink>
    </li>
  </ul>
</div>
`;

exports[`ProfileNav Component should match snapshot when profile is not mine 1`] = `
<div
  className="pro_nav user_nav not_me_nav"
>
  <ul>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin2"
      >
        Posts
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin2/tagged"
      >
        Tagged
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin2/shared"
      >
        Shared
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin2/gallery"
      >
        Gallery
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin2/groups"
      >
        Groups
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="pro_nav_active"
        className="inst_nav"
        exact={true}
        to="/profile/admin2/about"
      >
        About
      </NavLink>
    </li>
  </ul>
</div>
`;
